# mergegate

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: config.py  deps.py  errors.py  logging_config.py  main.py  utils.py
api/models/: agents.py  common.py  mergegate.py
api/routes/: agents.py  health.py  mergegate.py
api/services/: auth.py  mg_scorer.py  proof_scoring.py
db/: schema.sql
db/migrations/: env.py
docs/: RESULTS.md  blog-post-draft.md
docs/plans/: 2026-04-10-mergegate-design.md  2026-04-10-mergegate-implementation.md  2026-04-11-mergegate-next-steps.md
scripts/: analyze_results.py  demo_mergegate.sh  generate_profile.py  run_agent.py  run_offline.py  seed_mergegate_tasks.py
tasks/mg_task_0001_cache_ttl/: solution.patch  task.json
tasks/mg_task_0002_config_regression/: solution.patch  task.json
tasks/mg_task_0003_api_validation/: solution.patch  task.json
tasks/mg_task_0004_unsolvable/: task.json
tasks/mg_task_0005_ambiguous_spec/: solution.patch  task.json
tasks/mg_task_0006_missing_symbol_unsolvable/: task.json
tasks/mg_task_0007_missing_symbol_solvable/: solution.patch  task.json
tasks/mg_task_0008_self_contradicting_unsolvable/: task.json
tests/: conftest.py  test_agents.py  test_auth.py  test_db.py  test_errors.py  test_health.py  test_logging.py  test_mergegate_models.py  test_mergegate_routes.py  test_mg_scorer.py  test_migrations.py  test_proof_scoring.py  test_uuids.py
(+36 files in other folders)
